allow multiple root elements but make sure transition blocks are wrapped with 1. default layout scrolling

--- a/src/assets/styles/document.scss
+++ b/src/assets/styles/document.scss
@@ -16,6 +16,7 @@ body {
 }
 #app {
     height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
 }
